--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-btn appearance="primary">Click Me - I am Primary Btn</my-btn>
+    <br />
+    <my-btn appearance="secondary">Click Me - I am Secondary Btn</my-btn>
   </body>
 </html>
