Added lifecycle example my test

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <br />
     <my-btn appearance="primary">Click Me - I am Primary Btn</my-btn>
     <br />
     <my-btn appearance="secondary">Click Me - I am Secondary Btn</my-btn>
+    <br />
+    <my-test>I am running</my-test>
   </body>
 </html>
